--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
   width: 100%;
 }
@@ -44,22 +47,24 @@ body {
 main {
   background: var(--background-color-primary);
   color: var(--font-color-primary);
-  padding: 1em;
   display: -ms-grid;
   display: grid;
   font-family: var(--font-family-primary);
       grid-template-areas: "test" "info" "button";
   -ms-grid-rows: 2fr 1fr 1fr;
       grid-template-rows: 2fr 1fr 1fr;
-  max-width: var(--meter-width);
-  row-gap: 2em;
+  max-width: 32rem;
+  max-height: 64rem;
+  row-gap: 2%;
   width: 100%;
+  height: 100%;
 }
 
 main .start-btn-container {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: button;
+  width: 75%;
 }
 
 main .test-container {
@@ -68,7 +73,7 @@ main .test-container {
   grid-area: test;
 }
 
-main .test-info-container {
+main .test-info-progress-container {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: info;
@@ -79,8 +84,6 @@ main .test-info-container {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: test;
-  height: 100%;
-  width: 100%;
 }
 
 .pane-info {
@@ -164,7 +167,7 @@ main .test-info-container {
 }
 
 .test-container .info .unit-container .unit {
-  left: calc(100%);
+  left: 100%;
   right: 0;
   bottom: var(--font-size-sm);
 }
@@ -174,11 +177,22 @@ main .test-info-container {
 }
 
 .test-container .square-box canvas {
-  padding: 2em;
+  padding: 2%;
 }
 
 .test-info-container {
   padding: 0.5em;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .test-info-container .info {
@@ -202,11 +216,32 @@ main .test-info-container {
   font-size: 0.875em;
 }
 
+.progress-bar-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 1em;
+  margin: 0.5em;
+  padding: 0.25em;
+  position: relative;
+  width: 100%;
+}
+
+.progress-bar-container .progress-bar {
+  border-radius: 0;
+  height: 1em;
+  width: 0;
+}
+
 .unit-container {
-  --font-size-lg: 3.5em;
+  --font-size-lg: 3.5rem;
   --font-size-sm: calc(var(--font-size-lg) / 4);
   --height: calc(var(--font-size-lg) + var(--font-size-sm));
-  --padding: 0.2em;
+  --padding: 0.5rem;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -261,23 +296,66 @@ main .test-info-container {
   color: white;
 }
 
-.progress-bar-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  height: 1em;
-  margin: 0.5em;
-  padding: 0.25em;
-  position: relative;
-  width: 100%;
+@media all and (max-width: 768px) {
+  html,
+  body {
+    font-size: 0.85rem;
+  }
 }
 
-.progress-bar-container .progress-bar {
-  border-radius: 0;
-  height: 1em;
-  width: 0;
+@media all and (max-width: 480px) {
+  html,
+  body {
+    font-size: 0.8rem;
+  }
+}
+
+@media all and (max-width: 320px) {
+  html,
+  body {
+    font-size: 0.75rem;
+  }
+}
+
+@media all and (orientation: landscape) and (max-height: 992px) {
+  main {
+    -webkit-column-gap: 1em;
+            column-gap: 1em;
+        grid-template-areas: "test info" "test button";
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    max-width: 64rem;
+  }
+  main .start-btn-container {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  main .test-container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  main .test-info-progress-container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-top: 2em;
+  }
+  .test-info-progress-container .test-info-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .test-info-progress-container .test-info-container .info {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
