--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,8 +15,6 @@ $screen-size-xl: 1200px;
 
 $row-gap: 2%;
 
-// Need to fix alignment issues with info container when landscape.
-
 :root {
     --background-color-primary: rgba(51, 51, 51, 1);
     --background-color-primary-dark: rgb(37, 37, 37);
@@ -81,7 +79,7 @@ main {
     row-gap: $row-gap;
     width: 100%;
     height: 100%;
-    
+    padding: 1em;
 
     .start-btn-container {
         grid-area: button;
@@ -301,8 +299,6 @@ main {
             "test button";
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
-
-
 
         max-width: $meter-height;
 
