--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -59,25 +59,24 @@
     }
 }
 
-
-
 .start-btn {
     border: none;
     align-items: center;
     // background-color: var(--color-secondary);
 
-    background-image: linear-gradient(to right, var(--ul-color-1), var(--dl-color-1));
+    background-image: linear-gradient(
+        to right,
+        var(--ul-color-1),
+        var(--dl-color-1)
+    );
     border-radius: var(--border-radius-primary);
     color: black;
     cursor: pointer;
     display: flex;
     font-size: 2em;
     font-weight: normal;
-    height: 2em;
     justify-content: center;
     position: relative;
-
-    width: 10em;
 
     &.running {
         background-color: var(--dl-color-2);
