--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,6 +15,9 @@ $screen-size-xl: 1200px;
 
 $row-gap: 2%;
 
+$PI: 3.14159265358929;
+$ALPHA_0: $PI * 0.8;
+
 :root {
     --background-color-primary: rgba(51, 51, 51, 1);
     --background-color-primary-dark: rgb(37, 37, 37);
@@ -48,18 +51,23 @@ $row-gap: 2%;
 html {
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
+    
 }
 
 body {
-    padding: 0;
-    margin: 0;
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
 
-    // background: var(--background-color-primary);
+    background: var(--background-color-primary);
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0.5em;
+    box-sizing: border-box;
+    
 }
 
 main {
@@ -74,11 +82,14 @@ main {
         "info"
         "button";
 
+    grid-template-rows: 1fr 1fr 1fr;
+
     max-width: $meter-width;
     max-height: $meter-height;
     row-gap: $row-gap;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 
     .test-container {
         grid-area: test;
@@ -92,6 +103,7 @@ main {
         grid-area: button;
         display: flex;
         justify-content: center;
+
         button {
             width: 75%;
             height: 3rem;
@@ -122,107 +134,41 @@ main {
     visibility: hidden;
 }
 
-$PI: 3.14159265358929;
-$ALPHA_0: $PI*0.8;
-
-@function ipow($n, $exp) {
-    $value: 1;
-    @if $exp > 0 {
-        @for $i from 1 through $exp {
-            $value: $value * $n;
-        }
-    } @else if $exp < 0 {
-        @for $i from 1 through -$exp {
-            $value: $value / $n;
-        }
-    }
-    @return $value;
-}
-
-@function factorial($n) {
-    $value: 1;
-    @if $n > 0 {
-        @for $i from 1 through $n {
-            $value: $value * $i;
-        }
-    }
-    @return $value;
-}
-
-@function rad($theta) {
-    $unit: unit($theta);
-    $unitless: $theta / ($theta * 0 + 1);
-    @if $unit == deg {
-        $unitless: $unitless / 180 * $PI;
-    }
-    @return $unitless;
-}
-
-@function sin($theta) {
-    $sin: 0;
-    $theta: rad($theta);
-    @for $i from 0 through 10 {
-        $sin: $sin +
-            ipow(-1, $i) *
-            ipow($theta, (2 * $i + 1)) /
-            factorial(2 * $i + 1);
-    }
-    @return $sin;
-}
-
-@function cos($theta) {
-    @return sin($PI/2 - $theta);
-}
-
 .test-container {
-    flex-direction: column;
-    position: relative;
     display: flex;
-
+    flex-direction: column;
     box-sizing: border-box;
-    border: 2px solid green;
+    position: relative;
 
     .info {
+        box-sizing: border-box;
+
         background-color: var(--background-color-primary-dark);
         border-top-left-radius: 1em;
         border-top-right-radius: 1em;
 
-        --font-size: 3.5em;
-        --size: calc(var(--font-size) / 4);
         align-items: center;
         display: grid;
         grid-template-areas: "unit kind";
         justify-items: center;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 1fr 1fr;
 
-        padding: 0;
-        margin: 0;
-
+        width: 75%;
+        position: absolute;
         bottom: 0;
-      
+        margin: 0 auto;
         left: 0;
         right: 0;
-        margin: auto;
-        // position: absolute;
-        width: 75%;
-        border: 2px dashed yellow;
-        height: 100%;
-        // margin-top: -19%;
-        
-        // top: calc(100% * (1 - #{sin($ALPHA_0)}));
+
+        $y: (1 - sin($ALPHA_0))/2 - 0.05;
+        max-height: calc(100% *#{$y});
 
         .test-kind {
-            // grid-area: kind;
-            // align-items: center;
-            // display: flex;
-            // font-size: var(--font-size);
-            // height: var(--size);
-            // justify-content: center;
-            // text-align: center;
-            // width: var(--size);
+            grid-area: kind;
         }
 
         .unit-container {
+            --font-size-lg: 3rem;
             grid-area: unit;
             .unit {
                 left: 100%;
@@ -233,12 +179,8 @@ $ALPHA_0: $PI*0.8;
     }
 
     .square-box {
+        grid-area: test;
         z-index: 1;
-
-        canvas {
-            box-sizing: border-box;
-            border: 2px solid red;
-        }
     }
 }
 
@@ -251,6 +193,7 @@ $ALPHA_0: $PI*0.8;
     justify-content: space-evenly;
     display: flex;
     flex-direction: row;
+    padding: 1em 0;
 
     .info {
         align-items: center;
